Solving errors and attempting to get to running the project.